# programmiersprachen-raytracer

./: .gitignore  README.md
framework/: Optional_hit.hpp  box.cpp  box.hpp  camera.cpp  camera.hpp  color.hpp  composite.cpp  composite.hpp  cone.cpp  cone.hpp  cylinder.cpp  cylinder.hpp  light_source.cpp  light_source.cpp~  light_source.hpp  light_source.hpp~  material.cpp  material.cpp~  material.hpp  optional_hit.hpp  optional_hit.hpp~  pixel.cpp  pixel.hpp  ppmwriter.cpp  ray.hpp  renderer.cpp  renderer.cpp~  renderer.hpp  renderer_data.hpp  scene.hpp  sdf_loader.cpp  sdf_loader.hpp  shape.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
source/: CMakeLists.txt  render.cpp  simpletest.cpp
tests/: main.cpp  mat.txt
